--- a/assets/css/settings_page.css
+++ b/assets/css/settings_page.css
@@ -4,3 +4,28 @@
 #conversait_sso_key{
   width: 500px;
 }
+.display_none{
+  display: none;
+}
+#conv-export-comments .button.display_none{
+  display: none;
+}
+.export_finished{
+  color: #008000;
+  display: inline-block;
+  font-weight: bold;
+  margin-left: 10px;
+  margin-top: 5px;
+}
+.export_loading{
+  color: inherit;
+  font-style: italic;
+  margin: 5px 0;
+  display: inline-block;
+}
+.export_error{
+  font-weight: bold;
+  color: #FF0000;
+  margin: 5px;
+  display: inline-block;
+}
